Fix style issues with overflowing card divs

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,15 @@
-html, body, #root {
-  height: 100%;
-}
 body {
-  background: #333;
+  background: url("https://images.unsplash.com/photo-1564032236772-dfc27a12feda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80")
+  no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-color: #333;
   margin: 0;
   display: grid;
   padding: 3em;
-  place-items: center;
+  min-height: 100vh;
 }
 .boxes {
   display: grid;
@@ -17,7 +20,17 @@ body {
 .box {
   display: flex;
   flex-direction: column;
+  width: 60%;
   height: 100%;
+
+  &:nth-of-type(1) {
+    justify-self: flex-end;
+  }
+
+  &:nth-of-type(2) {
+    justify-self: flex-start;
+  }
+
   h1 {
     font-size: 20px;
     margin: 0 0 1rem 0;
@@ -46,4 +59,11 @@ body {
     border: 1px solid hotpink;
     color: #333;
   }
+}
+
+.new {
+  color: #666;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  margin: 1% 0 0 0;
 }
